<resources>

    <string name="app_name">recipes</string>
    <string name="title_recipe_view">Recipe View Details</string>
    <string name="title_recipe_edit">Recipe Edit Details</string>
    <string name="title_recipe_list">Recipes</string>
    <string name="saveRecipe">Save</string>
    <string name="create_recipe">Create</string>
    <string name="editRecipe">Edit</string>
    <string name="editCookTime">Cook Time</string>
    <string name="editOvenTemp">Oven Temp</string>
    <string name="editFrom">From</string>
    <string name="editName">Name</string>
    <string name="editIngedients">Ingredients</string>
    <string name="editDirections">Directions</string>
    <string name="addPicture">Take Photo</string>
    <string name="recipeImageContent">Recipe Image</string>
    <string name="settings">Settings</string>
    <string name="ftppassword">Image FTP Password</string>
    <string name="viewImage">View Photo</string>
    <string name="returnButton">Return</string>
    <string name="rotate">Rotate</string>
</resources>