<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/editScrollView"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:id="@+id/editMainRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/recipeImageContent"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/editNameFromRows"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/editNameRow"
                android:layout_width="319dp"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/editNameLabel"
                    android:layout_width="80dp"
                    android:layout_height="fill_parent"
                    android:text="@string/editName"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <EditText
                    android:id="@+id/editName"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="text"
                    android:textStyle="bold|italic" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/editFromRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/editFromLabel"
                    android:layout_width="80dp"
                    android:layout_height="fill_parent"
                    android:layout_marginTop="15dp"
                    android:text="@string/editFrom"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <EditText
                    android:id="@+id/editFrom"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="text" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/editOvenCookRows"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/editNameFromRows"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/editOvenTempRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/editOvenTempLabel"
                    android:layout_width="80dp"
                    android:layout_height="fill_parent"
                    android:layout_marginTop="15dp"
                    android:text="@string/editOvenTemp"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <EditText
                    android:id="@+id/editOvenTemp"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/editCookTimeRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/editCookTimeLabel"
                    android:layout_width="80dp"
                    android:layout_height="fill_parent"
                    android:layout_marginTop="15dp"
                    android:text="@string/editCookTime"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <EditText
                    android:id="@+id/editCookTime"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.13"
                    android:ems="10"
                    android:inputType="text" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/editIngredientsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editOvenCookRows"
            android:layout_marginTop="12dp"
            android:text="@string/editIngedients" />

        <EditText
            android:id="@+id/editIngredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editIngredientsLabel"
            android:ems="10"
            android:gravity="top|center_vertical"
            android:inputType="textMultiLine"
            android:scrollbarAlwaysDrawVerticalTrack="false"
            android:scrollbarStyle="insideOverlay"
            android:scrollbars="none" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/editDirectionsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editIngredients"
            android:text="@string/editDirections" />

        <EditText
            android:id="@+id/editDirections"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editDirectionsLabel"
            android:ems="10"
            android:inputType="textMultiLine"
            android:scrollbarStyle="insideOverlay"
            android:scrollbars="none" />

        <Button
            android:id="@+id/addPictureButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/editDirections"
            android:gravity="bottom|center_horizontal"
            android:paddingBottom="10dp"
            android:text="@string/addPicture" />

        <Button
            android:id="@+id/saveRecipeButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/addPictureButton"
            android:layout_centerHorizontal="true"
            android:gravity="bottom|center_horizontal"
            android:paddingBottom="10dp"
            android:text="@string/saveRecipe" />

        <Button
            android:id="@+id/viewImage"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/saveRecipeButton"
            android:gravity="bottom|center_horizontal"
            android:paddingBottom="10dp"
            android:text="@string/viewImage" />

    </RelativeLayout>

</ScrollView>